--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/melanierichards/seasons.melanie-richards.com#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.12.1",
+    "eleventy-plugin-svg-contents": "^0.7.0",
     "eslint": "^7.24.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
