--- a/package.json
+++ b/package.json
@@ -25,18 +25,17 @@
   },
   "homepage": "https://github.com/melanierichards/seasons.melanie-richards.com#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^0.12.1",
-    "eleventy-plugin-svg-contents": "^0.7.0",
     "eslint": "^7.24.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "html-validate": "^4.9.0",
-    "npm-run-all": "^4.1.5"
+    "html-validate": "^4.9.0"
   },
   "dependencies": {
-    "eleventy-plugin-sass": "^1.2.0",
+    "@11ty/eleventy": "^0.12.1",
+    "eleventy-plugin-svg-contents": "^0.7.0",
+    "npm-run-all": "^4.1.5",
     "sass": "^1.35.1"
   }
 }
